--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                         </div>
                         <div id="showHidediv">
                             <span id="showHideText">Show Calendar : </span>
-                            <button id="showHideBtn"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i></button></div>
+                            <button id="showHideBtn"><i class="fa fa-chevron-circle-down"
+                                    aria-hidden="true"></i></button></div>
                         <div class="row justify-content-center">
                             <div class="monthrow">
                                 <button id="prev"><i class="fa fa-angle-double-left" aria-hidden="true"></i></button>
@@ -48,7 +49,7 @@
                         </div>
                     </div>
                 </div>
-                
+
                 <div class="row calcontainer">
                     <div class="col-sm-1" id="day0"><label class="daylabel">Sun</label></div>
                     <div class="col-sm-1" id="day1"><label class="daylabel">Mon</label></div>
@@ -58,12 +59,14 @@
                     <div class="col-sm-1" id="day5"><label class="daylabel">Fri</label></div>
                     <div class="col-sm-1" id="day6"><label class="daylabel">Sat</label></div>
                 </div>
-                <hr style="border-top: 2px solid green;"/>
-                
+                <hr style="border-top: 2px solid green;" />
+
             </div>
             <div class="col-lg-7">
-                <div id="backToTodaydiv"><button id="backToToday">Back to today</button></div>
-                <div id="selectedDay">TO BE DONE</div>
+                <!-- <div id="backToTodaydiv"><button id="backToToday">Back to today</button></div> -->
+                <div class="selectedDayDiv">
+                    Current Selected Date : <span id="selectedDay"></span><button id="backToToday">Back to today</button>
+                </div>
                 <div class="timeSlotsContainer">
 
                 </div>
