--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
         <!-- container end -->
     </div>
     <footer>
-        Abhijeet Bhagat
+        <a href="https://github.com/bhagatabhijeet" target="_blank">Abhijeet Bhagat </a> | <a  target="_blank" href="https://github.com/bhagatabhijeet/workdayscheduler">
+            <i class="fa fa-github" aria-hidden="true"></i>
+        </a>
     </footer>
     <div class="leftlightdiv">
         <hr class="wire" />
