--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="selectedDayDiv">
                     Current Selected Date : <span id="selectedDay"></span><button id="backToToday">Back to today</button>
                 </div>
-                <div class="messagediv">One</div>
+                <div class="messagediv"><span id="message"></span></div>
                 <div class="timeSlotsContainer">
 
                 </div>
