--- a/index.html
+++ b/index.html
@@ -65,9 +65,32 @@
             <div class="col-lg-8">
                 <!-- <div id="backToTodaydiv"><button id="backToToday">Back to today</button></div> -->
                 <div class="selectedDayDiv">
-                    Current Selected Date : <span id="selectedDay"></span><button id="backToToday">Back to today</button>
+                    Current Selected Date : <span id="selectedDay"></span><button id="backToToday">Back to
+                        today</button>
                 </div>
                 <div class="messagediv"><span id="message"></span></div>
+                <div class="legendDiv">
+                    Legend:
+                    <ul>
+                        <li>
+                            <div class="smallbox graybox"></div><span>=</span><span>Past Event;</span>
+                        </li>
+                        <li>
+                            <div class="smallbox orangebox"></div><span>=</span><span>Current Hour;</span>
+                        </li>
+                        <li>
+                            <div class="smallbox greenbox"></div><span>=</span><span>Future Event</span>
+                        </li>
+                    </ul>
+                    <ul>
+                        <li>
+                            <div class="smallbox purplecircle"></div><span>=</span><span>Completed</span>
+                        </li>
+                        <li>
+                            <div class="smallbox whitecircle"></div><span>=</span><span>Event/Task Incomplete</span>
+                        </li>
+                    </ul>
+                </div>
                 <div class="timeSlotsContainer">
 
                 </div>
@@ -76,7 +99,8 @@
         <!-- container end -->
     </div>
     <footer>
-        <a href="https://github.com/bhagatabhijeet" target="_blank">Abhijeet Bhagat </a> | <a  target="_blank" href="https://github.com/bhagatabhijeet/workdayscheduler">
+        <a href="https://github.com/bhagatabhijeet" target="_blank">Abhijeet Bhagat </a> | <a target="_blank"
+            href="https://github.com/bhagatabhijeet/workdayscheduler">
             <i class="fa fa-github" aria-hidden="true"></i>
         </a>
     </footer>
