add message div

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                 <div class="selectedDayDiv">
                     Current Selected Date : <span id="selectedDay"></span><button id="backToToday">Back to today</button>
                 </div>
+                <div class="messagediv">One</div>
                 <div class="timeSlotsContainer">
 
                 </div>
