change calendar to display at beginning

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                             <img id="imgcal" src="https://unsplash.it/200/200" />
                         </div>
                         <div id="showHidediv">
-                            <span id="showHideText">Show Calendar : </span>
-                            <button id="showHideBtn"><i class="fa fa-chevron-circle-down"
+                            <span id="showHideText">Click to hide calendar : </span>
+                            <button id="showHideBtn"><i class="fa fa-chevron-circle-up"
                                     aria-hidden="true"></i></button></div>
                         <div class="row justify-content-center">
                             <div class="monthrow">
