--- a/index.html
+++ b/index.html
@@ -20,25 +20,38 @@
 </head>
 
 <body>
+    <!-- The top nav like header which is fixed -->
     <header>
         <div class="header-h1">Workday Scheduler</div>
-        <!-- <img  id="imgcal" src="https://unsplash.it/280/150"/>                 -->
-        <!-- <div class="image-calendar">
-            </div> -->
     </header>
+    <!-- container start -->
     <div class="container">
+        <!-- .today is used to display the current date to top right -->
         <div class="today"></div>
+        <!-- container is divided  as described below.
+            1. container contains 1 row
+            2. the row is rivided in 2 column a)lg-4 and b)lg-8
+            3. column 'a' is for the calndar and column 'b' is for the timeslots
+          -->
         <div class="row">
+            <!-- column 'a' start -->
             <div class="col-lg-4">
+                <!-- this column further contains 1 row  1 column -->
                 <div class="row">
                     <div class="col justify-content-space-evenly">
+                        <!-- div to display the photo frame on the wall  -->
                         <div class="row justify-content-center">
                             <img id="imgcal" src="https://unsplash.it/200/200" />
                         </div>
+                        <!-- div to display the calendar show/hide button -->
                         <div id="showHidediv">
                             <span id="showHideText">Click to hide calendar : </span>
-                            <button id="showHideBtn"><i class="fa fa-chevron-circle-up"
-                                    aria-hidden="true"></i></button></div>
+                            <!-- this is the calendar show hide button -->
+                            <button id="showHideBtn">
+                                <i class="fa fa-chevron-circle-up" aria-hidden="true"></i>
+                            </button>
+                        </div>
+                        <!-- div to display the month #prev #next buttons -->
                         <div class="row justify-content-center">
                             <div class="monthrow">
                                 <button id="prev"><i class="fa fa-angle-double-left" aria-hidden="true"></i></button>
@@ -49,7 +62,7 @@
                         </div>
                     </div>
                 </div>
-
+                <!-- container div to display the month date buttons -->
                 <div class="row calcontainer">
                     <div class="col-sm-1" id="day0"><label class="daylabel">Sun</label></div>
                     <div class="col-sm-1" id="day1"><label class="daylabel">Mon</label></div>
@@ -62,13 +75,17 @@
                 <hr style="border-top: 2px solid green;" />
 
             </div>
+            <!-- column 'b' -->
             <div class="col-lg-8">
-                <!-- <div id="backToTodaydiv"><button id="backToToday">Back to today</button></div> -->
+                <!-- div to show the selected date to the user on the screen -->
                 <div class="selectedDayDiv">
                     Current Selected Date : <span id="selectedDay"></span><button id="backToToday">Back to
                         today</button>
                 </div>
+                <!-- messagediv is positioned absolute and is used to display a user friedly message on the screen -->
                 <div class="messagediv"><span id="message"></span></div>
+
+                <!-- The calendar legend -->
                 <div class="legendDiv">
                     Legend:
                     <ul>
@@ -92,6 +109,7 @@
                     </ul>
 
                 </div>
+                <!-- timeSlotsContainer is where the time slots are displayed. All the timeslots are dynamicaaly generated using JavaScript -->
                 <div class="timeSlotsContainer">
 
                 </div>
@@ -99,34 +117,38 @@
         </div>
         <!-- container end -->
     </div>
+    <!-- footer -->
     <footer>
         <a href="https://github.com/bhagatabhijeet" target="_blank">Abhijeet Bhagat </a> | <a target="_blank"
             href="https://github.com/bhagatabhijeet/workdayscheduler">
             <i class="fa fa-github" aria-hidden="true"></i>
         </a>
     </footer>
+    <!-- following div and images are for decorate the background -->
+    <!-- There is a small animation where the light comes down at the page load -->
     <div class="leftlightdiv">
         <hr class="wire" />
         <img id="left-light" src="images/left-light.png" />
     </div>
-    <div style="height: 100px;"></div> <!-- hack-->
+    <div style="height: 100px;"></div> <!-- hack to increase height of page so that it does not hide behind the footer -->
     <img id="bottom-right-plant" src="images/plant-right.png" />
     <img id="bottom-left-plant" src="images/plant-left.png" />
 
+    <!-- jQuery 3.5.1 min -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script> -->
+    
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
         integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
-    <!-- jQuery CDN -->
-
+    
+    <!-- **** HEAVY USE OF MOMENT.JS IN THE CALENDAR LOGICS -->
     <!-- Moment.js -->
     <script src="script/moment.js"></script>
 
-    <!-- main.js -->
+    <!-- main.js is the main logic script-->
     <script src="script/main.js"></script>
 </body>
 
